# comic_dl

./: .gitignore  Cargo.toml  README.md  index.html
src/: antbyw.rs  dl_type.rs  local.rs  main.rs  mangadex.rs  utils.rs
