[package]
name = "comic_dl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indicatif = "0.17.9"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.21.0"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
image = "0.25.5"
colored = "2.1.0"
